2003-08-25  Scott Dattalo  <scott@dattalo.com>
	* src/ioports.cc - more 16f628 Port A fixes
	
2003-08-19  Scott Dattalo  <scott@dattalo.com>
	* eXdbm/parse.c - "char" is used to store result of fgetc, but
			EOF doesn't fit in the default unsigned chars.
	* src/cod.cc - an endian issue which made symbol values come out wrong.
		- note these fixes came from a patch attached to an anonymous  bug report
	
2003-08-18  Scott Dattalo  <scott@dattalo.com>
	* src/ioports.cc - Port A on the F62x devices was named "ioport"
	* src/p16f62x.cc - intcon was not declared at 0x8b (bug 566165)
	* regression/p16f628.asm  - Added a regression test for the f68
	* regression/p16f628.stc

2003-08-17  Scott Dattalo  <scott@dattalo.com>
	* regression/* started the regression test directory. Only two
	tests are performed: instruction validation for the midrange
	family and a simple node test.
	
2003-08-17  Scott Dattalo  <scott@dattalo.com>
	* Huge patch from Borut Razem mailto:borut.razem@siol.net that enables
	gpsim to be compiled with MS Visual C under Windows.

	
2003-06-19  Scott Dattalo  <scott@dattalo.com>

	* src/gpsim_time.h Multiple breaks at one Cycle were getting clobbered.
	* src/gpsim_time.cc
	* src/16bit-registers.cc Added support for TMR3
	* src/pic-processor.h add pll_scale for the 18f devices.
	
2003-05-25  Scott Dattalo  <scott@dattalo.com>

	* src/breakpoints.cc program memory break points were not working.
	* Started formatting the Changelog properly
	
gpsim - Gnu Pic Simulator, a simulator for Microchip's PIC microcontrollers.

T. Scott Dattalo


gpsim-0.21.0
	* Starting with 0.21.0, Changelog will be properly formatted
	* Added 18f454,18455
	* Added breakpoint capability on nodes
	* Added spi Module
	* Added attributes to external usart module
	* Ralf rewrote the Breadboard
	* gui is now in C++
	* Added 16f627,16f628 processors
	* log command has been added (Command Line)
	* Profiling has been added (gui)
	* Trace viewer has been added