@@ -1,0 +1,96 @@
+/* config_win32.h.in.  Generated by configure,          */
+/*                     ./configure CC=cl CXX=cl,        */
+/*                     manually renamed from config.h,  */
+/*                     some stuff added at the end      */
+/* config.h.in.  Generated automatically from configure.in by autoheader.  */
+
+/* Define if using alloca.c.  */
+/* #undef C_ALLOCA */
+
+/* Define to one of _getb67, GETB67, getb67 for Cray-2 and Cray-YMP systems.
+   This function is required for alloca.c support on those systems.  */
+/* #undef CRAY_STACKSEG_END */
+
+/* Define if you have alloca, as a function or macro.  */
+#define HAVE_ALLOCA 1
+
+/* Define if you have <alloca.h> and it should be used (not on Ultrix).  */
+/* #undef HAVE_ALLOCA_H */
+
+/* Define as the return type of signal handlers (int or void).  */
+#define RETSIGTYPE void
+
+/* If using the C implementation of alloca, define if you know the
+   direction of stack growth for your system; otherwise it will be
+   automatically deduced at run-time.
+ STACK_DIRECTION > 0 => grows toward higher addresses
+ STACK_DIRECTION < 0 => grows toward lower addresses
+ STACK_DIRECTION = 0 => direction of growth unknown
+ */
+/* #undef STACK_DIRECTION */
+
+/* Define if you have the ANSI C header files.  */
+#define STDC_HEADERS 1
+
+/* Define if lex declares yytext as a char * by default, not a char[].  */
+#define YYTEXT_POINTER 1
+
+/* Define if you have the gui   */
+/* #undef HAVE_GUI */
+#define PACKAGE "gpsim"
+#define VERSION "0.20.15"
+/* #undef HAVE_LIBREADLINE */
+
+/* Define if you have the strdup function.  */
+#define HAVE_STRDUP 1
+
+/* Define if you have the strstr function.  */
+#define HAVE_STRSTR 1
+
+/* Define if you have the strtod function.  */
+#define HAVE_STRTOD 1
+
+/* Define if you have the strtol function.  */
+#define HAVE_STRTOL 1
+
+/* Define if you have the strtoul function.  */
+#define HAVE_STRTOUL 1
+
+/* Define if you have the <dlfcn.h> header file.  */
+/* #undef HAVE_DLFCN_H */
+
+/* Define if you have the <getopt.h> header file.  */
+/* #undef HAVE_GETOPT_H */
+
+/* Define if you have the <readline/chardefs.h> header file.  */
+/* #undef HAVE_READLINE_CHARDEFS_H */
+
+/* Define if you have the <readline/history.h> header file.  */
+/* #undef HAVE_READLINE_HISTORY_H */
+
+/* Define if you have the <readline/keymaps.h> header file.  */
+/* #undef HAVE_READLINE_KEYMAPS_H */
+
+/* Define if you have the <readline/readline.h> header file.  */
+/* #undef HAVE_READLINE_READLINE_H */
+
+/* Define if you have the <readline/tilde.h> header file.  */
+/* #undef HAVE_READLINE_TILDE_H */
+
+/* Name of package */
+#define PACKAGE "gpsim"
+
+/* Version number of package */
+#define VERSION "0.20.15"
+
+/* manually added stuff */
+#ifndef __FUNCTION__
+#define __FUNCTION__  __FILE__
+#endif
+#ifndef __PRETTY_FUNCTION__
+#define __PRETTY_FUNCTION__ __FUNCTION__
+#endif
+
+#define snprintf  _snprintf
+#define strcasecmp  stricmp
+#define bzero(dest, count)  memset(dest, 0, count)
